# MarketArbiter

./: .gitignore  README.md  pyproject.toml
configs/: feed_provider_bakeoff.v1.json  surveyor_10_symbol_prod_soak_20260506.manifest.json  surveyor_feed_provider_policy.v1.json  surveyor_feed_workset.default.json  surveyor_symbol_onboarding.example.json
docs/: ARBITER_ARCHITECTURE_V1.md  ARBITER_DIRECTION.md  ARBITER_PRE_SR_BACKTEST_CONTROLS_V1.md  ARBITER_RETEST_EXECUTION_CONTRACT_V1.md  BLOFIN_GAP_RECOVERY_WORKFLOW_V1.md  BLOFIN_HISTORY_REQUIREMENTS_V1.md  BLOFIN_MARKET_DATA_CONTRACT_V1.md  EXTRACTION_MANIFEST_2026-04-21.md  FEED_PROVIDER_BAKEOFF_PLAN_V1.md  HISTORICAL_DATA_SOURCE_DECISION_V0.md  INTRADAY_REVISIT_SURVEYOR_ARBITER_ARCHITECTURE_V1.md  MARKETARBITER_STATUS_AND_ROADMAP_2026-04-27.md  OHLCV_BACKTEST_INPUT_CONTRACT_V0.md  PINE_SURVEYOR_SR_PARITY_MAP_V1.md  RISK_AND_CONFLUENCE_MODEL_V0.md  SR_LEVELS_RELEASE_V0.md  SR_SELECTOR_DECOMPOSITION_NOTES_20260505.md  STRATEGY_BACKTESTING_MECHANISM_V0.md  STRATEGY_HYPOTHESIS_V0.md  STRATEGY_QUANTIFICATION_MAP_V0.md  SURVEYOR_ARBITER_REFOCUS_PLAN_2026-04-19.md  SURVEYOR_CONTINUOUS_FEED_PLAN_V1.md  SURVEYOR_FEED_ONBOARDING_CONTRACT_V1.md  SURVEYOR_FEED_TOP100_READY_TARGET_V1.md  SURVEYOR_RECOMPUTE_SCHEDULE_V1.md  SURVEYOR_TO_ARBITER_CONTROL_PLANE_HANDOFF_V1.md  SURVEYOR_UNIFIED_DATASET_CONTRACT_V1.md  SYMBOL_ONBOARDING_AND_100_PAIR_SCALE_V1.md
market_arbiter/: __init__.py
tests/: test_arbiter_retest_execution_contract.py  test_backtest_controls.py  test_backtest_splits.py  test_binance_public_data.py  (+18 more)
(+81 files in other folders)
