[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-arbiter"
version = "0.1.0"
description = "Surveyor/Arbiter trading architecture extracted from LiquidSniper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "streamlit",
  "ccxt",
]

[tool.setuptools.packages.find]
include = ["market_arbiter*"]
